# sensor-dashboard

./: Python_difusion_Ard.py  app.py  ejecutar.sh  pyproject.toml  sensor_arduino.py  sensor_mock.py  sensor_realtime.py
templates/: base.html  chart_data.html  index.html
